# SovietX

./: .gitignore  LICENSE  README.md
SovietExtension/Rely/: supported_versions.txt
SovietExtension/cross_platform/: CMakeLists.txt  install_windows.bat  install_windows.ps1
SovietExtension/cross_platform/common/: config.cpp  config.h  feature_flags.h  forward_notice.cpp  forward_notice.h  log.cpp  log.h  message_types.h  revoke_parser.cpp  revoke_parser.h  string_utils.cpp  string_utils.h  version_profile.h
SovietExtension/cross_platform/inject/windows/: injector.cpp
SovietExtension/cross_platform/platform/: platform_hook.h  platform_memory.h  platform_process.h  platform_services.cpp  platform_ui.h
SovietExtension/cross_platform/platform/windows/: SovietExtension.def  SovietX.def  win_antirevoke.cpp  win_autologin.cpp  win_config.cpp  win_hook.cpp  win_main.cpp  win_memory.cpp  win_process.cpp  win_theme.cpp  win_ui.cpp
SovietExtension/cross_platform/resources/: supported_versions_macos.txt  supported_versions_windows.txt
SovietExtension/cross_platform/tools/: re_helper.cpp
SovietX/cross_platform/: CMakeLists.txt  auto_inject.vbs  install_windows.ps1
SovietX/cross_platform/build-windows/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SovietInjector.vcxproj  SovietInjector.vcxproj.filters  SovietREHelper.vcxproj  SovietREHelper.vcxproj.filters  SovietX.sln  SovietX.vcxproj  SovietX.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SovietX/cross_platform/build-windows-41124/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SovietInjector.vcxproj  SovietInjector.vcxproj.filters  SovietREHelper.vcxproj  SovietREHelper.vcxproj.filters  SovietX.sln  SovietX.vcxproj  SovietX.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
SovietX/cross_platform/build-windows-41124/Release/: SovietX.exp
SovietX/cross_platform/build-windows-41124/SovietInjector.dir/Release/: SovietInjector.exe.recipe
SovietX/cross_platform/build-windows-41124/SovietInjector.dir/Release/SovietInjector.tlog/: CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SovietX/cross_platform/build-windows-41124/SovietREHelper.dir/Release/: SovietREHelper.exe.recipe
SovietX/cross_platform/build-windows-41124/SovietREHelper.dir/Release/SovietREHelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SovietX/cross_platform/build-windows-41124/SovietX.dir/Release/: SovietX.dll.recipe
SovietX/cross_platform/build-windows-41124/SovietX.dir/Release/SovietX.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  SovietX.lastbuildstate  SovietX.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SovietX/cross_platform/build-windows-41154/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SovietInjector.vcxproj  SovietInjector.vcxproj.filters  SovietREHelper.vcxproj  SovietREHelper.vcxproj.filters  SovietX.sln  SovietX.vcxproj  SovietX.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
SovietX/cross_platform/build-windows-41154-antirevoke/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SovietInjector.vcxproj  SovietInjector.vcxproj.filters  SovietREHelper.vcxproj  SovietREHelper.vcxproj.filters  SovietX.sln  SovietX.vcxproj  SovietX.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
SovietX/cross_platform/build-windows-41154-antirevoke/Release/: SovietX.exp
SovietX/cross_platform/build-windows-41154-antirevoke/SovietInjector.dir/Release/: SovietInjector.exe.recipe
SovietX/cross_platform/build-windows-41154-antirevoke/SovietREHelper.dir/Release/: SovietREHelper.exe.recipe
SovietX/cross_platform/build-windows-41154-antirevoke/SovietX.dir/Release/: SovietX.dll.recipe
SovietX/cross_platform/build-windows-41154/Release/: SovietX.exp  SovietX.lib
SovietX/cross_platform/build-windows-41154/SovietInjector.dir/Release/: SovietInjector.exe.recipe
SovietX/cross_platform/build-windows-41154/SovietREHelper.dir/Release/: SovietREHelper.exe.recipe
SovietX/cross_platform/build-windows-41154/SovietX.dir/Release/: SovietX.dll.recipe
SovietX/cross_platform/build-windows/Release/: SovietX.exp
SovietX/cross_platform/build-windows/SovietInjector.dir/Release/: SovietInjector.exe.recipe
SovietX/cross_platform/build-windows/SovietREHelper.dir/Release/: SovietREHelper.exe.recipe
SovietX/cross_platform/build-windows/SovietX.dir/Release/: SovietX.dll.recipe
SovietX/cross_platform/common/: config.cpp  config.h  feature_flags.h  forward_notice.h  log.cpp  log.h  message_types.h  revoke_parser.cpp  string_utils.cpp  version_profile.h
SovietX/cross_platform/dist-windows-411221-antirevoke/lib/: minhook.x64.lib
SovietX/cross_platform/dist-windows-411221-antirevoke/share/SovietX/: supported_versions_windows.txt
SovietX/cross_platform/dist-windows-411221-antirevoke/share/minhook/: minhook-config.cmake
SovietX/cross_platform/dist-windows-41124/share/SovietX/: supported_versions_windows.txt
SovietX/cross_platform/dist-windows-41154-antirevoke/share/SovietX/: supported_versions_windows.txt
SovietX/cross_platform/dist-windows-41154-zh/share/SovietX/: supported_versions_windows.txt
SovietX/cross_platform/dist-windows-41154/lib/: minhook.x64.lib
SovietX/cross_platform/inject/windows/: injector.cpp
SovietX/cross_platform/platform/: platform_memory.h  platform_process.h  platform_services.cpp  platform_ui.h
SovietX/cross_platform/platform/windows/: SovietX.def  win_antirevoke.cpp  win_autologin.cpp  win_config.cpp  win_hook.cpp  win_main.cpp  win_memory.cpp  win_process.cpp  win_theme.cpp  win_ui.cpp
SovietX/cross_platform/resources/: supported_versions_macos.txt
SovietX/cross_platform/tools/: re_helper.cpp
(+117 files in other folders)
